--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pokemon-db",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -13,6 +14,7 @@
     "mongodb": "^2.2.33",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
